k8s/cart-redis-deployment.yaml
bapiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart-redis
  template:
    metadata:
      labels:
        app: cart-redis
    spec:
      containers:
        - name: cart-redis
          image: redis
---
apiVersion: v1
kind: Service
metadata:
  name: cart-redis-srv
spec:
  selector:
    app: cart-redis
  ports:
    - name: db
      protocol: TCP
      port: 6379
      targetPort: 6379
