k8s/cart-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
        - name: cart-container
          image: cart-service:latest # Skaffold will tag this
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  selector:
    app: cart
  ports:
    - name: cart
      protocol: TCP
      port: 8081
      targetPort: 8081
